# algebra-calculator

./: .gitignore  CLAUDE.md  CMakeLists.txt
inc/: LU_decomposition.hpp  helper_class.hpp  matrix.hpp  multi.hpp
inc/detail/: matrix.ipp
src/: det.cpp  eigen-value.cpp  multi-mat.cpp
test/: test.cpp
